--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "require": {
         "php": ">=7.4",
         "ext-pdo": "*",
-        "doctrine/orm": "^2.6"
+        "doctrine/orm": "^2.6",
+        "symfony/routing": "^4.3",
+        "nyholm/psr7": "^1.2",
+        "nyholm/psr7-server": "^0.3.0",
+        "php-di/php-di": "^6.0",
+        "psr/http-server-handler": "^1.0"
     },
     "autoload": {
         "psr-4": {
