--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "nyholm/psr7": "^1.2",
         "nyholm/psr7-server": "^0.3.0",
         "php-di/php-di": "^6.0",
-        "psr/http-server-handler": "^1.0"
+        "psr/http-server-handler": "^1.0",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
