--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         }
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11.16"
+        "phpstan/phpstan": "^0.11.16",
+        "phpunit/phpunit": "^8.5"
     }
 }
