--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^0.11.16",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "codeception/codeception": "^4.0",
+        "codeception/module-db": "^1.0",
+        "codeception/module-phpbrowser": "^1.0"
     }
 }
